err/ydbf.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/YDbf-0.3rc1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ydbf'...
Compiling './lib/python3.5/site-packages/ydbf/dump.py'...
***   File "./lib/python3.5/site-packages/ydbf/dump.py", line 78
    print """\
Filename:       %(filename)s
Version:        %(signature)s (%(version)s)
Encoding:       %(lang_code)s (%(encoding)s, %(language)s)
Num of records: %(records_number)s
Header length:  %(header_length)s
Record length:  %(record_length)s
Last change:    %(last_change)s
Num of fields:  %(fields_number)s
===========================================
Num   Name                Type Len  Decimal
-------------------------------------------""" % header_info
              
                            
                                           
                                                          
                                  
                                 
                                 
                               
                                 
                                           
                                           
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ydbf/reader.py'...
***   File "./lib/python3.5/site-packages/ydbf/reader.py", line 255
    except UnicodeDecodeError, err:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ydbf/test.py'...
***   File "./lib/python3.5/site-packages/ydbf/test.py", line 48
    print "test %s SKIPPED, have no test file %s" % (testmethod.__name__, filename)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ydbf/writer.py'...
***   File "./lib/python3.5/site-packages/ydbf/writer.py", line 162
    except UnicodeDecodeError, err:
                             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
